--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,5 @@
 /*------------------------------------------------------------------
-Project:    Nairo Personal Portfolio React Template
+Project:    chichipan Personal Portfolio React Template
 Version:    1.0
 Primary use:  ib-themes
 
